--- a/BankingProject/src/main/webapp/style/styles.css
+++ b/BankingProject/src/main/webapp/style/styles.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body{
 	margin: 0;
 	width: 100%;
@@ -12,18 +15,25 @@ body{
 	float: right;
 	margin-right: 0;
 }
+.mainContent{
+	overflow:auto;
+	width: 100%;
+	height: 100%;
+}
 .leftsidenav{
 	width: 20%;
 	float: left;
 	margin-left: 0;
 	height: 100%; 
-}
+	border-right: 1px solid #f1f1f1;
+	}
 .leftsidenav > .navOptions{
-	padding-left: 
+	cursor: pointer;
+	padding-left; 
 	width: 100%;
 	padding : 10px;
 	border-bottom: 1px solid #f1f1f1;
-	height: 20px;
+	height: 45px;
 }
 .navOptions:hover{
 	border: 1px solid #292e7d;
@@ -35,7 +45,117 @@ a{
 }
 .rightsidenav{
 	float: left;
+    overflow: hidden;
 	width: 78%;
 	height: 100%;
-	border-left: 1px solid #f1f1f1;
+	margin-left: 5px;
+}
+.content{
+	width: 100%;
+	height: 100%;
+	padding: 50px;
+	text-align: center;
+	margin: auto;
+}
+
+/*Nav Header*/
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  margin-left: 5px;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(242,111,33);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   font-size: 13px;
+   background-color: #292e7d;
+   color: #f1f1f1;
+   text-align: center;
+}
+.detailTable {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.detailTable td, .detailTable th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.detailTable tr:nth-child(even){background-color: #f2f2f2;}
+
+.detailTable tr:hover {background-color: #ddd;}
+
+.detailTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #f26e21;
+  color: white;
+}
+.transferOptBtn{
+	padding: 50px;
+	border-radius: 8px;
+	background-image: linear-gradient(to right, #fec803 , #f26e21);
+	float: left;
+	margin-right: 50px;
+	cursor: pointer;
 }
