--- a/BankingProject/src/main/webapp/style/paymentGateway.css
+++ b/BankingProject/src/main/webapp/style/paymentGateway.css
@@ -24,4 +24,16 @@
         border-radius: 8px;
         padding: 10px;
         background-color: #f1f1f1;
+        text-align: center;
+    }
+    input{
+        height: 40px;
+        width: 60%;
+        border: 1px solid grey;
+        border-radius: 30px;
+        padding-left: 10px;
+        font-size: 15px;
+    }
+    form{
+    	text-align: center;
     }
