--- a/BankingProject/src/main/webapp/style/home.css
+++ b/BankingProject/src/main/webapp/style/home.css
@@ -1,16 +1,26 @@
-@charset "ISO-8859-1";
 body {
   font-family: Verdana,sans-serif;
   font-size: 0.9em;
   margin: 0;
 }
-div#header {
-  padding: 10px;
-  color: white;
-  background-color:black;
-  text-align:center;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #0A0644;
 }
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family:Poppins-Regular;
+  font-size:25px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -21,6 +31,12 @@ div#header {
    color: white;
 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.a{
+	font-family:Poppins-Regular;
+	font-size:22px;
 }
 .menu a {
   background-color:#e5e5e5;
@@ -33,7 +49,9 @@ div#header {
 .main {
   float:left;
   width:60%;
+  height:80%;
   padding:0 20px;
+  font-family:Poppins-Regular;
    
 
 }
