--- a/BankingProject/src/main/webapp/style/openAccount.css
+++ b/BankingProject/src/main/webapp/style/openAccount.css
@@ -1,5 +1,5 @@
 *{
-box-sizing: border-box;    
+box-sizing: border-box;  
 }
 
 body {
@@ -7,45 +7,66 @@ body {
 	font-family: Poppins-Regular, sans-serif;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password] ,input[type=number],input[type=email],input[type=date] {
 	height: 40px;
-    width: 60%;
+    width: 80%;
     border: 1px solid grey;
     border-radius: 30px;
     padding-left: 10px;
     font-size: 15px;
-	background: #f1f1f1;
+	background: white;
 	 
+}
+td{
+	font-family: Poppins-Regular;
+	font-size:18px;
+}
+select{
+	
+	height: 30px;
+    width: 50%;
+    border: 1px solid grey;
+    border-radius: 30px;
+    padding-left: 10px;
+    font-size: 15px;
+	background: white;
 }
 
  h1{
-        padding-top: 10px;
+        padding-top: 5px;
         font-family: sans-serif;
+       
     }
 
-
-
-
 .submit {
-	height: 40px;
-	width: 100px;
+	height: 60px;
+	width: 140px;
 	color: #f1f1f1;
 	border: 1px solid grey;
 	border-radius: 30px;
 	padding-left: 10px;
 	background-color: #292e7d;
+    
+
 }
 
 .mainDiv {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 280%;
 	background-image: linear-gradient(to right, #f3751f, #292e7d);
 }
 
+
+h1{
+	text-align:center;
+	font-family:Poppins-Regular;
+	
+}
+
 .main {
-	width: 30%;
-	height: 60%;
+	width: 43%;
+	height: 95%;
 	position: absolute;
 	top: 0;
 	bottom: 0;
