Last Day Commit

--- a/BankingProject/src/main/webapp/style/home.css
+++ b/BankingProject/src/main/webapp/style/home.css
@@ -62,7 +62,8 @@ body {
   padding:15px;
   margin-top:7px;
   text-align:center;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-right: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 }
 
